53-8 Remove Item handler and Make Data consistent across UI

--- a/src/Components/ReviewItem/ReviewItem.css
+++ b/src/Components/ReviewItem/ReviewItem.css
@@ -3,8 +3,8 @@
   gap: 1.5rem;
   width: 570px;
   border: 1px solid sandybrown;
-  border-radius: 5px;
-  padding: 5px;
+  border-radius: 8px;
+  padding: 8px;
 }
 
 .review-item img {
@@ -42,4 +42,9 @@
   border-radius: 50%;
   padding: 5px 1px;
   margin-right: 12px;
+  transition: all 0.3s ease-in-out;
+}
+
+.delete-icon:hover {
+  background-color: rgba(235, 87, 87, 0.5);
 }
