--- a/src/Components/Cart/Cart.css
+++ b/src/Components/Cart/Cart.css
@@ -8,3 +8,15 @@
   text-align: center;
   font-size: 1.2rem;
 }
+
+.btn-clear-cart {
+  width: 100%;
+  padding: 8px 0;
+  background-color: #eb1d36;
+  border: none;
+  border-radius: 5px;
+  color: #fff;
+  font-weight: 500;
+  font-size: 1rem;
+  cursor: pointer;
+}
