--- a/src/Components/Shop/Shop.css
+++ b/src/Components/Shop/Shop.css
@@ -16,3 +16,16 @@
 .cart-container {
   background-color: #ff99004d;
 }
+
+.btn-review-order {
+  width: 100%;
+  margin-top: 10px;
+  padding: 8px 0;
+  background-color: goldenrod;
+  border: none;
+  border-radius: 5px;
+  color: #fff;
+  font-weight: 500;
+  font-size: 1rem;
+  cursor: pointer;
+}
